--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,8 +35,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core:
-  firebase_auth: ^3.2.0
+  firebase_auth: 
+  image_picker:
+  cloud_firestore:
+  firebase_storage:
+  font_awesome_flutter:
+  flutter_swiper_null_safety: ^1.0.2
+
+  intl: ^0.17.0
+  time: ^2.1.0
+  carousel_slider: ^4.0.0
+
   
+
+  
+
 
 dev_dependencies:
   flutter_test:
