--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,12 @@ dependencies:
   firebase_storage:
   font_awesome_flutter:
   flutter_swiper_null_safety: ^1.0.2
-
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.17.0
   time: ^2.1.0
   carousel_slider: ^4.0.0
+  random_string:
 
   
 
@@ -60,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  #flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
